# keepassx_new

./: CMakeLists.txt  COPYING  INSTALL.md  release-tool.ps1  vcpkg.json
cmake/: FindXkbcommon.cmake
docs/topics/: DatabaseOperations.adoc  Welcome.adoc
share/icons/: icons.qrc
share/translations/: CMakeLists.txt  keepassxc_de.ts  keepassxc_en.ts  keepassxc_en_US.ts
src/: CMakeLists.txt  config-keepassx.h.cmake
src/autotype/: AutoType.cpp  AutoType.h  AutoTypeMatch.h  AutoTypeMatchView.cpp  AutoTypeSelectDialog.cpp  CMakeLists.txt
src/autotype/mac/: AutoTypeMac.h  CMakeLists.txt
src/autotype/test/: CMakeLists.txt
src/autotype/wayland/: AutoTypeWayland.cpp  AutoTypeWayland.h  CMakeLists.txt
src/autotype/windows/: AutoTypeWindows.h  CMakeLists.txt
src/autotype/xcb/: AutoTypeXCB.cpp  AutoTypeXCB.h  CMakeLists.txt
src/browser/: BrowserAction.cpp  BrowserPasskeys.cpp  BrowserService.cpp  BrowserService.h  CMakeLists.txt  NativeMessageInstaller.cpp  PasskeyUtils.cpp
src/cli/: CMakeLists.txt  Merge.cpp  TextStream.cpp  TextStream.h  Utils.cpp  Utils.h
src/core/: Base32.cpp  Base32.h  Clock.cpp  Config.cpp  Config.h  CustomData.cpp  Database.cpp  Database.h  Entry.cpp  Entry.h  EntryAttachments.cpp  EntryAttachments.h  Group.cpp  Metadata.cpp  PassphraseGenerator.cpp  SignalMultiplexer.h  Tools.cpp  Tools.h  Totp.cpp  Translator.cpp
src/crypto/: Crypto.cpp  SymmetricCipher.cpp
src/fdosecrets/: CMakeLists.txt  FdoSecretsPlugin.h  FdoSecretsSettings.cpp
src/format/: BitwardenReader.cpp  CsvParser.cpp  HtmlExporter.cpp  HtmlExporter.h  Kdbx3Reader.cpp  Kdbx3Writer.cpp  Kdbx4Reader.cpp  Kdbx4Writer.cpp  KdbxXmlReader.cpp  KdbxXmlReader.h  KdbxXmlWriter.cpp  KeePass1Reader.cpp  KeePass2Writer.cpp  (+3 more)
src/sshagent/: CMakeLists.txt  KeeAgentSettings.cpp  OpenSSHKey.cpp  OpenSSHKeyGen.cpp  SSHAgent.cpp  SSHAgent.h
tests/: CMakeLists.txt  TestBase32.cpp  TestBrowser.cpp  TestCli.cpp  TestCsvParser.cpp  TestDatabase.cpp  TestEntry.cpp  TestEntry.h  TestEntryModel.cpp  TestKdbx4.cpp  TestKdbx4.h  TestPasskeys.cpp  TestSSHAgent.cpp  TestSharing.cpp  TestTools.cpp
(+96 files in other folders)
